--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "test": "vitest --coverage --typecheck --run",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -15,7 +17,10 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/node": "^22.13.10",
+    "path": "^0.12.7",
+    "typescript": "~5.6.2",
     "vite": "^6.0.3",
-    "typescript": "~5.6.2"
+    "vitest": "^3.0.8"
   }
 }
