--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "safari",
-  "private": true,
-  "version": "0.1.0",
   "type": "module",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
     "test": "vitest --coverage --typecheck --run",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.10.1",
     "@tauri-apps/cli": "^2",
     "@types/node": "^22.13.10",
+    "eslint": "^9.22.0",
     "path": "^0.12.7",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
