--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,28 +1,23 @@
+image: docker:latest
+
+services:
+  - name: docker:24.0.7-dind
+    alias: docker
+
+variables:
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: ''
+
 stages:
   - image
   - install
   - build
 
-variables:
-  DOCKER_TLS_CERTDIR: ''
-
 build_custom_image:
   stage: image
-  image: docker:latest
-  services:
-    - name: docker:24.0.7-dind
-      alias: docker
   script:
-    - unset DOCKER_HOST
     - docker build -t $CI_REGISTRY_IMAGE:custom .
     - docker push $CI_REGISTRY_IMAGE:custom
-
-image: $CI_REGISTRY_IMAGE:custom
-
-cache:
-  paths:
-    - node_modules/
-    - core/target/
 
 install_front:
   stage: install
