--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ services:
     alias: docker
 
 variables:
-  DOCKER_HOST: ''
+  DOCKER_HOST: tcp://docker:2375
   DOCKER_TLS_CERTDIR: ''
 
 stages:
@@ -16,15 +16,18 @@ stages:
 build_custom_image:
   stage: image
   script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $CI_REGISTRY_IMAGE:custom .
     - docker push $CI_REGISTRY_IMAGE:custom
 
 install_front:
   stage: install
+  image: $CI_REGISTRY_IMAGE:custom
   script:
     - bun install
 
 build_app:
   stage: build
+  image: $CI_REGISTRY_IMAGE:custom
   script:
     - bun run tauri build
