🚧 wip(ci): no bundle + artifact path fix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,11 +28,11 @@ build_app:
     npm_config_cache: .npm
     CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER: x86_64-w64-mingw32-gcc
   script:
-    - npm run tauri build -- --target x86_64-pc-windows-gnu
+    - npm run tauri build -- --target x86_64-pc-windows-gnu --no-bundle
   dependencies:
     - install_front
   artifacts:
     paths:
-      - core/target/x86_64-pc-windows-msvc/release/safari.exe
+      - core/target/x86_64-pc-windows-gnu/release/safari.exe
     expire_in: 1 week
     name: safari-windows-x86_64
