--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^22.13.10",
     "eslint": "^9.22.0",
     "eslint-plugin-format": "^1.0.1",
+    "memfs": "^4.17.0",
     "path": "^0.12.7",
     "typescript": "~5.8.2",
     "vite": "^6.2.2",
