💎 enhance(ci): lint check also fixes errors

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,23 @@ install_front:
 lint_front:
   stage: lint
   image: szofttech.inf.elte.hu:5050/szofttech-c-2025/group-08/vitorlas-devs:custom
+  variables:
+    GIT_STRATEGY: clone
   script:
-    - npm run lint
+    - git config --global user.email "gitlab-ci@example.com"
+    - git config --global user.name "GitLab CI"
+    - git remote set-url origin https://oauth2:${ci_token}@${CI_SERVER_HOST}/${CI_PROJECT_PATH}.git
+    - git fetch origin $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
+    - git checkout -B $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME origin/$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
+    - npm run lint:fix
+    - git add .
+    - |
+      if git diff --cached --quiet; then
+        echo "No linting issues to fix"
+      else
+        git commit -m "🧼 chore(lint): fixed linting errors"
+        git push origin HEAD:$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
+      fi
   rules:
     - if: $CI_MERGE_REQUEST_IID
   needs:
