--- a/package.json
+++ b/package.json
@@ -14,20 +14,19 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.4.1",
-    "@tauri-apps/plugin-opener": "^2.2.6",
-    "@tauri-apps/plugin-process": "~2.2.1"
+    "@tauri-apps/api": "^2.3.0",
+    "@tauri-apps/plugin-opener": "^2.2.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.12.0",
-    "@tauri-apps/cli": "^2.4.1",
-    "@types/node": "^22.14.1",
-    "eslint": "^9.24.0",
+    "@antfu/eslint-config": "^4.10.1",
+    "@tauri-apps/cli": "^2.3.1",
+    "@types/node": "^22.13.10",
+    "eslint": "^9.22.0",
     "eslint-plugin-format": "^1.0.1",
     "memfs": "^4.17.0",
     "path": "^0.12.7",
-    "typescript": "~5.8.3",
-    "vite": "^6.2.6",
-    "vitest": "^3.1.1"
+    "typescript": "~5.8.2",
+    "vite": "^6.2.2",
+    "vitest": "^3.0.8"
   }
 }
