--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@antfu/eslint-config": "^4.13.1",
     "@tauri-apps/cli": "^2.5.0",
     "@types/node": "^22.15.18",
+    "@vitest/coverage-v8": "3.1.3",
     "eslint": "^9.27.0",
     "eslint-plugin-format": "^1.0.1",
     "memfs": "^4.17.2",
