--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
-      
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
@@ -50,7 +50,7 @@ jobs:
       - name: Commit and Push Lint Fixes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "🧼 chore(lint): fixed linting errors"
+          commit_message: '🧼 chore(lint): fixed linting errors'
           branch: ${{ github.head_ref }}
 
   # 3. TEST STAGE
@@ -65,7 +65,7 @@ jobs:
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
-      
+
       - name: Install Dependencies
         run: bun install --frozen-lockfile
 
@@ -78,7 +78,7 @@ jobs:
   build:
     needs: install
     # Bun now works on Windows too!
-    runs-on: windows-latest 
+    runs-on: windows-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
