fix: build ignored

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,45 +75,45 @@ jobs:
         run: bun run test
 
   # 4. BUILD STAGE (Native Windows)
-  build:
-    needs: install
-    runs-on: windows-latest 
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+  # build:
+  #   needs: install
+  #   runs-on: windows-latest 
+  #   steps:
+  #     - name: Checkout repo
+  #       uses: actions/checkout@v4
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
+  #     - name: Setup Bun
+  #       uses: oven-sh/setup-bun@v2
+  #       with:
+  #         bun-version: latest
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-pc-windows-msvc
+  #     - name: Install Rust
+  #       uses: dtolnay/rust-toolchain@stable
+  #       with:
+  #         targets: x86_64-pc-windows-msvc
 
-      # --- START OPTIMIZATION ---
-      # This action caches the 'target/' directory and Cargo registry.
-      # It hashes your Cargo.lock to determine if dependencies changed.
-      - name: Rust Cache
-        uses: swatinem/rust-cache@v2
-        with:
-          # IMPORTANT: Point this to the folder containing Cargo.toml
-          # For Tauri, this is usually 'src-tauri'
-          work-dir: src-tauri
-      # --- END OPTIMIZATION ---
+  #     # --- START OPTIMIZATION ---
+  #     # This action caches the 'target/' directory and Cargo registry.
+  #     # It hashes your Cargo.lock to determine if dependencies changed.
+  #     - name: Rust Cache
+  #       uses: swatinem/rust-cache@v2
+  #       with:
+  #         # IMPORTANT: Point this to the folder containing Cargo.toml
+  #         # For Tauri, this is usually 'src-tauri'
+  #         work-dir: src-tauri
+  #     # --- END OPTIMIZATION ---
 
-      - name: Install Frontend Dependencies
-        # Bun installs are fast, but using the cache makes them instant
-        run: bun install --frozen-lockfile
+  #     - name: Install Frontend Dependencies
+  #       # Bun installs are fast, but using the cache makes them instant
+  #       run: bun install --frozen-lockfile
 
-      - name: Build Tauri App
-        run: bun run tauri build
+  #     - name: Build Tauri App
+  #       run: bun run tauri build
 
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: safari-windows-app
-          # The path is 'release' because we are doing a native build, not cross-compiling
-          path: src-tauri/target/release/bundle/nsis/*.exe
-          retention-days: 7
+  #     - name: Upload Artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: safari-windows-app
+  #         # The path is 'release' because we are doing a native build, not cross-compiling
+  #         path: src-tauri/target/release/bundle/nsis/*.exe
+  #         retention-days: 7
